# ska-low-cbf-cnic-sw

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
docs/src/: conf.py  index.rst
resources/git-hooks/: prepare-commit-msg
src/ska_low_cbf_sw_cnic/: __main__.py  change_port.py  cnic_fpga.py  compare_pcap.py  eth_interface_rate.py  hbm_packet_controller.py  monitor.py  pcap.py  pcap_to_hbm.py  ptp.py  ptp_scheduler.py  status_display.py
tests/: codif_sample.pcapng  fpgamap_22032914.py  fpgamap_22081921.py  test_comapre_pcap.py  test_hpc.py  test_pcap.py  test_ptp.py
