[tool.poetry]
name = "ska_low_cbf_sw_cnic"
version = "0.3.1"
description = "CNIC Control Software"
authors = ["Andrew Bolin, Jason van Aardt, CSIRO"]
license = "CSIRO Open Source Software Licence"
packages = [{include = "ska_low_cbf_sw_cnic", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
ska-low-cbf-fpga = "^0.14.5"
dpkt = "^1.9.7"
scapy = "^2.4.5"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"  # to match SKA CI pipeline
isort = "5.10.1"  # to match SKA CI pipeline
pylint-junit = "0.3.2"  # to match SKA CI pipeline
pre-commit = "^2.16.0"
pylint = "^2.8.2"
pytest = "^7.1.0"
pytest-bdd = "^4.0.1"
pytest-cov = "^3.0.0"
flake8 = "^3.9.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.5.0"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.0.1"
platformdirs = "^2.5.1"

[tool.poetry.scripts]
change_port = "ska_low_cbf_sw_cnic.change_port:main"
compare_pcap = "ska_low_cbf_sw_cnic.compare_pcap:main"
eth_interface_rate = "ska_low_cbf_sw_cnic.eth_interface_rate:main"
cnic = "ska_low_cbf_sw_cnic.__main__:main"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["src/ska_low_cbf_sw_cnic", "tests"]
line_length = 79
